DecafParser.py
# Generated from Decaf.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class DecafParser ( Parser ):

    grammarFileName = "Decaf.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'Program'", "'{'", "'}'", 
                     "';'", "'['", "']'", "'struct'", "'int'", "'boolean'", 
                     "'char'", "'void'", "'('", "','", "')'", "'if'", "'else'", 
                     "'while'", "'return'", "'='", "'.'", "'-'", "'!'", 
                     "'*'", "'/'", "'%'", "'+'", "'=='", "'!='", "'<'", 
                     "'>'", "'<='", "'>='", "'&&'", "'||'", "'true'", "'false'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'\"'", "'''" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ID", "NUM", "CHAR", "WS", 
                      "QUOTES", "APOSTROPHE", "CHAR_LITERAL" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_varDeclaration = 2
    RULE_structDeclaration = 3
    RULE_varType = 4
    RULE_methodDeclaration = 5
    RULE_methodType = 6
    RULE_parameter = 7
    RULE_parameterType = 8
    RULE_block = 9
    RULE_statement = 10
    RULE_location = 11
    RULE_var_id = 12
    RULE_array_id = 13
    RULE_expression = 14
    RULE_methodCall = 15
    RULE_arith_op_cmp = 16
    RULE_arith_op_and = 17
    RULE_arith_op_or = 18
    RULE_literal = 19
    RULE_int_literal = 20
    RULE_bool_literal = 21
    RULE_char_literal = 22

    ruleNames =  [ "program", "declaration", "varDeclaration", "structDeclaration", 
                   "varType", "methodDeclaration", "methodType", "parameter", 
                   "parameterType", "block", "statement", "location", "var_id", 
                   "array_id", "expression", "methodCall", "arith_op_cmp", 
                   "arith_op_and", "arith_op_or", "literal", "int_literal", 
                   "bool_literal", "char_literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    ID=38
    NUM=39
    CHAR=40
    WS=41
    QUOTES=42
    APOSTROPHE=43
    CHAR_LITERAL=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(DecafParser.DeclarationContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = DecafParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(DecafParser.T__0)
            self.state = 47
            self.match(DecafParser.T__1)
            self.state = 48
            self.match(DecafParser.T__2)
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.T__7) | (1 << DecafParser.T__8) | (1 << DecafParser.T__9) | (1 << DecafParser.T__10) | (1 << DecafParser.T__11))) != 0):
                self.state = 49
                self.declaration()
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 55
            self.match(DecafParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def structDeclaration(self):
            return self.getTypedRuleContext(DecafParser.StructDeclarationContext,0)


        def varDeclaration(self):
            return self.getTypedRuleContext(DecafParser.VarDeclarationContext,0)


        def methodDeclaration(self):
            return self.getTypedRuleContext(DecafParser.MethodDeclarationContext,0)


        def getRuleIndex(self):
            return DecafParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = DecafParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.structDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.varDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 59
                self.methodDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafParser.RULE_varDeclaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VarDeclaration_ArrayContext(VarDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.VarDeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def varType(self):
            return self.getTypedRuleContext(DecafParser.VarTypeContext,0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.ID)
            else:
                return self.getToken(DecafParser.ID, i)
        def NUM(self):
            return self.getToken(DecafParser.NUM, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration_Array" ):
                listener.enterVarDeclaration_Array(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration_Array" ):
                listener.exitVarDeclaration_Array(self)


    class VarDeclaration_IDContext(VarDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.VarDeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def varType(self):
            return self.getTypedRuleContext(DecafParser.VarTypeContext,0)

        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration_ID" ):
                listener.enterVarDeclaration_ID(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration_ID" ):
                listener.exitVarDeclaration_ID(self)



    def varDeclaration(self):

        localctx = DecafParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDeclaration)
        self._la = 0 # Token type
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = DecafParser.VarDeclaration_IDContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.varType()
                self.state = 63
                self.match(DecafParser.ID)
                self.state = 64
                self.match(DecafParser.T__4)
                pass

            elif la_ == 2:
                localctx = DecafParser.VarDeclaration_ArrayContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.varType()
                self.state = 67
                self.match(DecafParser.ID)
                self.state = 68
                self.match(DecafParser.T__5)
                self.state = 69
                _la = self._input.LA(1)
                if not(_la==DecafParser.ID or _la==DecafParser.NUM):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 70
                self.match(DecafParser.T__6)
                self.state = 71
                self.match(DecafParser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(DecafParser.VarDeclarationContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_structDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDeclaration" ):
                listener.enterStructDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDeclaration" ):
                listener.exitStructDeclaration(self)




    def structDeclaration(self):

        localctx = DecafParser.StructDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_structDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(DecafParser.T__7)
            self.state = 76
            self.match(DecafParser.ID)
            self.state = 77
            self.match(DecafParser.T__2)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.T__7) | (1 << DecafParser.T__8) | (1 << DecafParser.T__9) | (1 << DecafParser.T__10) | (1 << DecafParser.T__11))) != 0):
                self.state = 78
                self.varDeclaration()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 84
            self.match(DecafParser.T__3)
            self.state = 85
            self.match(DecafParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafParser.RULE_varType

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VarType_voidContext(VarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.VarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarType_void" ):
                listener.enterVarType_void(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarType_void" ):
                listener.exitVarType_void(self)


    class VarType_intContext(VarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.VarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarType_int" ):
                listener.enterVarType_int(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarType_int" ):
                listener.exitVarType_int(self)


    class VarType_charContext(VarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.VarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarType_char" ):
                listener.enterVarType_char(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarType_char" ):
                listener.exitVarType_char(self)


    class VarType_structContext(VarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.VarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarType_struct" ):
                listener.enterVarType_struct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarType_struct" ):
                listener.exitVarType_struct(self)


    class VarType_structDeclarationContext(VarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.VarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def structDeclaration(self):
            return self.getTypedRuleContext(DecafParser.StructDeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarType_structDeclaration" ):
                listener.enterVarType_structDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarType_structDeclaration" ):
                listener.exitVarType_structDeclaration(self)


    class VarType_booleanContext(VarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.VarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarType_boolean" ):
                listener.enterVarType_boolean(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarType_boolean" ):
                listener.exitVarType_boolean(self)



    def varType(self):

        localctx = DecafParser.VarTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varType)
        try:
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = DecafParser.VarType_intContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.match(DecafParser.T__8)
                pass

            elif la_ == 2:
                localctx = DecafParser.VarType_booleanContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.match(DecafParser.T__9)
                pass

            elif la_ == 3:
                localctx = DecafParser.VarType_charContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 89
                self.match(DecafParser.T__10)
                pass

            elif la_ == 4:
                localctx = DecafParser.VarType_structContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 90
                self.match(DecafParser.T__7)
                self.state = 91
                self.match(DecafParser.ID)
                pass

            elif la_ == 5:
                localctx = DecafParser.VarType_structDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 92
                self.structDeclaration()
                pass

            elif la_ == 6:
                localctx = DecafParser.VarType_voidContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 93
                self.match(DecafParser.T__11)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodType(self):
            return self.getTypedRuleContext(DecafParser.MethodTypeContext,0)


        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(DecafParser.BlockContext,0)


        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.ParameterContext)
            else:
                return self.getTypedRuleContext(DecafParser.ParameterContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)




    def methodDeclaration(self):

        localctx = DecafParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.methodType()
            self.state = 97
            self.match(DecafParser.ID)
            self.state = 98
            self.match(DecafParser.T__12)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.T__8) | (1 << DecafParser.T__9) | (1 << DecafParser.T__10) | (1 << DecafParser.T__11))) != 0):
                self.state = 99
                self.parameter()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DecafParser.T__13:
                    self.state = 100
                    self.match(DecafParser.T__13)
                    self.state = 101
                    self.parameter()
                    self.state = 106
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 112
            self.match(DecafParser.T__14)
            self.state = 113
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafParser.RULE_methodType

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MethodType_voidContext(MethodTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.MethodTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodType_void" ):
                listener.enterMethodType_void(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodType_void" ):
                listener.exitMethodType_void(self)


    class MethodType_intContext(MethodTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.MethodTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodType_int" ):
                listener.enterMethodType_int(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodType_int" ):
                listener.exitMethodType_int(self)


    class MethodType_booleanContext(MethodTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.MethodTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodType_boolean" ):
                listener.enterMethodType_boolean(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodType_boolean" ):
                listener.exitMethodType_boolean(self)


    class MethodType_charContext(MethodTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.MethodTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodType_char" ):
                listener.enterMethodType_char(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodType_char" ):
                listener.exitMethodType_char(self)



    def methodType(self):

        localctx = DecafParser.MethodTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_methodType)
        try:
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DecafParser.T__8]:
                localctx = DecafParser.MethodType_intContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(DecafParser.T__8)
                pass
            elif token in [DecafParser.T__10]:
                localctx = DecafParser.MethodType_charContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.match(DecafParser.T__10)
                pass
            elif token in [DecafParser.T__9]:
                localctx = DecafParser.MethodType_booleanContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.match(DecafParser.T__9)
                pass
            elif token in [DecafParser.T__11]:
                localctx = DecafParser.MethodType_voidContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 118
                self.match(DecafParser.T__11)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameterType(self):
            return self.getTypedRuleContext(DecafParser.ParameterTypeContext,0)


        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)




    def parameter(self):

        localctx = DecafParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.parameterType()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DecafParser.ID:
                    self.state = 122
                    self.match(DecafParser.ID)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.parameterType()
                self.state = 126
                self.match(DecafParser.ID)
                self.state = 127
                self.match(DecafParser.T__5)
                self.state = 128
                self.match(DecafParser.T__6)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafParser.RULE_parameterType

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ParameterType_booleanContext(ParameterTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.ParameterTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterType_boolean" ):
                listener.enterParameterType_boolean(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterType_boolean" ):
                listener.exitParameterType_boolean(self)


    class ParameterType_charContext(ParameterTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.ParameterTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterType_char" ):
                listener.enterParameterType_char(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterType_char" ):
                listener.exitParameterType_char(self)


    class ParameterType_intContext(ParameterTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.ParameterTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterType_int" ):
                listener.enterParameterType_int(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterType_int" ):
                listener.exitParameterType_int(self)


    class ParameterType_voidContext(ParameterTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.ParameterTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterType_void" ):
                listener.enterParameterType_void(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterType_void" ):
                listener.exitParameterType_void(self)



    def parameterType(self):

        localctx = DecafParser.ParameterTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameterType)
        try:
            self.state = 136
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DecafParser.T__8]:
                localctx = DecafParser.ParameterType_intContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.match(DecafParser.T__8)
                pass
            elif token in [DecafParser.T__10]:
                localctx = DecafParser.ParameterType_charContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.match(DecafParser.T__10)
                pass
            elif token in [DecafParser.T__9]:
                localctx = DecafParser.ParameterType_booleanContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 134
                self.match(DecafParser.T__9)
                pass
            elif token in [DecafParser.T__11]:
                localctx = DecafParser.ParameterType_voidContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 135
                self.match(DecafParser.T__11)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(DecafParser.VarDeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.StatementContext)
            else:
                return self.getTypedRuleContext(DecafParser.StatementContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)
